--- a/Form2.resx
+++ b/Form2.resx
@@ -1157,6 +1157,47 @@
         YII=
 </value>
   </data>
+  <data name="button7.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMEAAACQCAIAAAA+8piZAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
+        IgAALiIBquLdkgAACD5JREFUeF7t3WdXFVcUBuD8KNPVxGhMTEwxmmBDsRFURLFix4KxoyJFhChNQAWV
+        IipYo9Goy95LsEt+wz4fMsO4WLiR671nTzlz77vW8wkuM3vOeVcWjNn7fEBJfQAkkCGQQoZAChkCKWQI
+        pJAhkEKGQAoZAilkCKSQIZBChkAKGQIpZAikkCGQQoZAChkCKWQIpJAhkNLMkDpfSivG0MgP2dcDYRez
+        KtmQYhKQboZeHVX/takr5bR2YuCbp540dRZTQesm0aiP2HfBa7oZcrbNcbOGctNo9MfsM755q5hbNbRl
+        aoDFJCA3MuS4t5/yMyj5U/ZJH7yjmPt1VDgzkGISkHsZcjw6SCXzKKUv+7yn1IN6Xobj8SEqnU8p/djn
+        wV26GbpXxzesOythFYtp8pfspzxi/SeQF9Dd02ZVucS3YhKQdoYibpvjeYvau4LSBrKfdV1UxbxoUftW
+        Utog9rMg52WGHNZfcIfWUvq37AouUrdr+U174xQzYwi7AkjoZuhmDd+eyDpaVctmmv0Du44r1NVKfrvI
+        rGKO5NKcH9l1QI9uhmLdNoe1eSe2U9ZwdjUh/WJO5tPCEexqECt/M9TlXDEtH8WuqU1azN87KXs0uyZE
+        TzdDVyr4Tmi4XEZrUuSvudX5Un5lDVYxf0zAP5ho0M3Q+RK+B9pu7KFNqZJ/o3C1mGra/Dtec8fEgAw5
+        7u6j7TNo7CfsRtHwrBi85o6KMRlyPDxAxbNp3OfsdpGpM0X8Oq54dJB2zqHxsRWTgHQzdKqAr7iL2htU
+        2UKa2J/dtDfW33r8Ci5qb1Tli2jiF+ym0EU3Q55um+PZYVWznFK/YrfuyY9inlvFZEdTTAIyOEOOl0fU
+        gTU0/RtWQHfqeB7/KY+8OvreYhKQboZat/L19dTrY6p5I836npXhsL7FP+8pq5jDmyjTk3fuYaSbIZ+3
+        zdHRqtq20fxhphRzPI8W/MKKSUChylCXv4poaZIpxZzdQctGdhWTgMKZIcc/f9LqcTTyQ+t3FP4t/13c
+        RTnjE/M1t26G6nL4IgblaqVX74c0XKuiDVMSrS9AO0Or+fJBlzt7adt0GqPzzj2MkCHPPKinokwa9xlb
+        uvijm6GabL5k8E7tDbQ7iyZE+849jHQzVLmELxZE8KxZVS+jKQPYMsYHZMhHL45YvwPQtMFsMcNON0MV
+        i/kCQZReH1NN62nmd2xJw0szQ1Qyly8NxKSjVbVupXk/84UNIWQoaKcLafFvfHlDBRkyw4VSWjk2pK+5
+        dTOUn8FXAeTCOf5GN0N56fz5wS1hG3+DDJkqPONvdDO0ZSp/ZvDCm/E3vs7iiZVuhjZM5k8L3rHH3/g3
+        iydWyFB4PDd0/A0yFDZvxt94OIsnVroZWpXMnw381GHQ+BvdDK0cy58K/GfG+BtkKC4EOv5GN0NLR/LH
+        gMDZ429cmMUTK90MLRzBHwAMYc/i8XX8DTIUp+7usw8vYLvmDd0MZQ3nRYM5rL//96/ybcKEboYyh/K6
+        wQTOVImpX/P98hIyFC9eH1ON6wL5n7WRofDraFXNGwN8c62boWmD+ZOA/5y31b2M1PGNbobSBvHnAT9Z
+        6WnbZsgMJGQohE7mG9UQopuhKQP4g4EPzhRRlnFTs3QzlNKXPx546lwxLfqV74IZkCHjXSg1fM4aMmSw
+        S7vtA+DZyptHN0NJffgDg4uulIfoxH5kyDDXqkJ3fBEyZIyb1bR+UhjbpQUZetHCVwH03K4Vnr4VLEGG
+        ejviHqJ3d5/dFh3yObLIUEDu11FeenwctifIUHsDXxeIxsMDVDBT77Q/MwkyFP0R9+B4fIh2zA7FGIaY
+        IEO+aG+gknnxOqsaGfLYk0Z7PnVcH+gpyND1PXy9oLtnh1XFIprQj61b/BFk6GolX7UAdbTyrwTo+WFV
+        tTRxjoANf4ZetNgHP1yv4l8PhFVMbbaxg4I8IsjQ5TK+gj57ecSex9PZReXVWenR87elyyiCDAW4bdaG
+        1edQ2kBTijmwxsDRUr4JW4ZeH7MnOPXoogqsmIBauowSngxZvzU3raf0d3dRqdOF/POeslu6Nhg1jCxA
+        ggz5dsS93UW1mTKGsAK687eY3Hg6sUXO7AxZG9a6lTKHslv35GMxONaeMzhDx/No7k/spr1Rbdv4j7vr
+        xPb4OOPHC4IMHc3lC+2WUwU0fxi7XWQenpV+upAWGNfSZRRBhrzYtrM79CZUelLMueLAx2WGgjEZOl9C
+        S5LYLaLndjGltNToli6jCDLUtJ4vvZ6Lu2j5KHbxWKn6HH5ZPZd2BzhgNaQEGZIfcX+5zO6i6nFlDS4U
+        47R09bgyvFdAGbpaSTnjXeyDERVjt3QFMJI3bvieoRvVtHai6xumarP5jaJhFbMulC1dRhFkaM8yviWR
+        3aqhjakebVjM5+3frrWLCXlTjiEEGYp+2+7stWcle7lhMRQTFy1dRvE4Q/fqaOs0H7qoVOVifuue7Jau
+        6fHR0mUUQYbKFvJN6u5BPeVn0Bi/uqgin5XutHT5VkyC0c9Qr9v26CAVzaKx/nZR9VaM3dKV6XcxCcbV
+        DP3bQDvnUHIQXVTvLKZkbry2dBnFpQw9aaRdC2hccF1UBTPfKibeW7qMIsiQc8T902brFyNKCbqLyinm
+        WbMqT4iWLqMIMrQxtbOLqj//eiA2OcUkSkuXUQQZAuiEDIEUMgRSyBBIIUMghQyBFDIEUsgQSCFDIIUM
+        gRQyBFLIEEghQyCFDIEUMgRSyBBIIUMghQyBFDIEUsgQSCFDIIUMgRQyBFLIEEghQyCFDIEUMgRSyBBI
+        IUMghQyBFDIEUsgQSCFDIIUMgUxSn/8BykLqK+Mj/i8AAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAA+gAAAJxCAIAAABe3w+MAAAABGdBTUEAALGeYUxB9wAAACBjSFJNAACH
